Update YML and ignore new cache folder

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,37 +1,26 @@
-# Displayed title TODO: customize
+# TODO: Customize
 site_name: Sharing website
-# General description
-site_description: A page to share content based on login info
-# Author of the site
-site_author: Flag Hunter
-# Copyright notice in the footer
-copyright: Copyright &copy; 2022 - 2023 Flag Hunter
-# URL of the site
-site_url: https://flaghunter01.github.io/sharing-website
-# URL of the GitHub repo TODO: customize
+# Site URL TODO: customize
+site_url: https://flaghunter01.github.io/sharing-website/
+# Copyright in footer
+copyright: Copyright &copy; 2012 - 2024 Tim FROLOV
+# Git repo URL TODO: customize
 repo_url: https://github.com/FlagHunter01/sharing-website
-# Name of the repo TODO: customize
-repo_name: FlagHunter01/sharing-website
-
-
+# Git repo name
+repo_name: Flaghunter01/sharing-website
+# Git edit URI TODO: customize
+#edit_uri: edit/main/docs
 
 nav:
-    - Introduction: index.md
-    - Documentation: doc.md
-
+  - Introduction: index.md
+  - Documentation: doc.md
 
 theme:
+  # Material theme
   name: material
-
-  # 1 per project (HTML5 limitation)
-  language: en
-
-  #logo: assets/logo.png
-  icon:
-    logo: material/share-variant
-  #favicon: assets/logo.png
-
+  # Colors
   palette:
+
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
       toggle:
@@ -40,138 +29,144 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: deep-purple
-      accent: red
+      scheme: default 
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
+      #primary: indigo
+      #accent: indigo
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: teal
-      accent: amber
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
-
-
+      #primary: indigo
+      #accent: indigo
+  # Font
   font:
     text: Roboto
     code: Roboto Mono
-
-
+  # Language TODO: customize
+  language: en
+  # Logo / icons TODO: custimize
+  #logo: assets/logo.png
+  icon:
+    logo: material/share-variant
+  #favicon: images/favicon.png
   features:
-    # Copy to clipboard button in code blocks
-    - content.code.copy
-    # Next and previous buttons in footer
-    - navigation.footer
-    # Monopage architecture (TODO: does it work?)
+    # Monopage (?)
     - navigation.instant
-    # Update URL with current anchor
+    # Start loading when link is hovered
+    - navigation.instant.prefetch
+    # Progress bar
+    - navigation.instant.progress
+    # Update URL with anchor
     - navigation.tracking
-    # Show tabs in the top menu
+    # Top menu tabs
     - navigation.tabs
-    # Show tabs in the left menu
-    - navigation.sections
-    # Auto-expand left menu
-    - navigation.expand
-    # Breadcrumbs displayed on top of the page
+    # Breadcrumbs
     - navigation.path
-    # First page of section serves as a preview (https://squidfunk.github.io/mkdocs-material/setup/setting-up-navigation/#section-index-pages)
+    # Avoid loading hidden nav and save 33% of build size (can't show folded sections, redirects to first page of the section instead)
+    #- navigation.prune
+    # Section overview pages
     - navigation.indexes
-    # Autoscroll menus so the current page is allways visible
+    # Anchor following
     - toc.follow
     # Back to top button
     - navigation.top
-    # Search auto completion
+    # Search suggestion
     - search.suggest
-    # Hightlight search results
+    # Search highlight
     - search.highlight
-    # Link content tabs togeather across the page
+    # Search sharing
+    #- search.share
+    # Footer nav 
+    - navigation.footer
+    # Keep content tab choice synchronised
     - content.tabs.link
-    # Better tooltips
-    - content.tooltips
-
-
-plugins:
-  # Self-host all ressources aka fonts, icons etc (RGPD)
-  #- privacy
-  # Client side search
-  - search
-  # Mass-manage meta info (useful for blog)
-  #- meta
-  # Social cards - previews on social networks
-  #- social
-  # Blog. Required arborescence: https://squidfunk.github.io/mkdocs-material/setup/setting-up-a-blog/#built-in-blog-plugin
-  #- blog
-  # Table of contents keeps the formating (icons, underline etc)
-  #- typeset
-  # Generate RSS (for blog only)
-  #- rss:
-  #    match_path: blog/posts/.*
-  #    date_from_meta:
-  #      as_creation: date
-
-
-  # Revision date info for GitHub repos TODO: uncomment if repo
-  #- git-revision-date-localized:
-  #    enable_creation_date: true
-  #    #fallback_to_build_date: true
-  #- git-committers:
-  #    repository: FlagHunter01/frolov.eu
-  #    branch: main
-  #- git-authors
-  # Optimize for offline use
-  #- offline
-
+    # Edit the page on git TODO: uncomment if needed
+    #- content.action.edit
+    #- content.action.view
 
 extra:
-  # Page status that can be displayed
-  status:
-    new: New
-    deprecated: Deprecated
-  # Social links in the footer
+  # Alt language TODO: customize
+  #alternate:
+  #  - name: Francais
+  #    link: /fr/
+  #    lang: fr
+  #  - name: English
+  #    link: /
+  #    lang: en
+  # Alternate "home" logo link
+  #homepage: https://example.com
+  # Cookies FIXME: Implement if needed https://squidfunk.github.io/mkdocs-material/setup/ensuring-data-privacy/#configuration
+  # Social links in footer TODO: customize
   social:
-    - icon: fontawesome/brands/github
+    - icon: material/github
       link: https://github.com/flaghunter01/
-  # Main logo link URL. site_url by default
-  #homepage: site_url
+      name: FlagHunter01
+
+plugins:
+  # Download external dependancies
+  - privacy
+  # Search
+  - search
+  # Social cards
+  #- social
+  # Blog
+  #- blog
+  # RSS TODO: uncomment if needed
+  #- rss:
+  #    match_path: blog/posts/.* 
+  #    date_from_meta:
+  #      as_creation: date
+  #    categories:
+  #      - categories
+  #      - tags
+  # Git commiters TODO: uncomment if needed and customize
+  - git-committers:
+      repository: Flaghunter01/sharing-website
+      branch: documentation
+  # Git dates of file TODO: uncomment if needed
+  - git-revision-date-localized:
+      enable_creation_date: true
+  # Optimize build
+  #- optimize
+  # Offline optimization
+  #- offline
 
 markdown_extensions:
-  # Support for admonitions
+
+  # Python Markdown
+  - abbr
   - admonition
-  # Annotations, grids, buttons, tooltips, colored icons, image alignment and lazy images
   - attr_list
-  # Add footnotes
+  - def_list
   - footnotes
-  # Allows the useagse of HTML
   - md_in_html
-  # Generates tables of content.
   - toc:
-      # Visible anchor
-      permalink: ⚓︎
-  # Draw tables
-  - tables
-  # Underline and superscript
+      permalink: true
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
   - pymdownx.caret
-  # Hightlight
-  - pymdownx.mark
-  # Subscript and deleted
-  - pymdownx.tilde
-  # make admonitions colabseable
   - pymdownx.details
-  # Highlight code blocks
-  - pymdownx.highlight:
-      anchor_linenums: true
-  # Nesting of just about everything
-  - pymdownx.superfences
-  # Draw keys
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
   - pymdownx.keys
-  # Separate content into different tabs
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
-  # Taxk lists
   - pymdownx.tasklist:
       custom_checkbox: true
+  - pymdownx.tilde
